--- a/app/views/ftf/eoi/v2-0/b-details.html
+++ b/app/views/ftf/eoi/v2-0/b-details.html
@@ -32,7 +32,7 @@
       <div class="govuk-grid-column-two-thirds">
 
         <span class="govuk-caption-l">Expression of interest</span>
-        <h1 class="govuk-heading-l">Business details</h1>
+        <h1 class="govuk-heading-l">Employee and turnover details</h1>
       <p class="govuk-body">Business details for Imaginary Farms Ltd</p>
       
 
