--- a/app/views/ftf/eoi/v2-0/check.html
+++ b/app/views/ftf/eoi/v2-0/check.html
@@ -101,7 +101,7 @@
 
 
 <br><br>
-<p class="govuk-body">Changes to the following sections will update your Rural Payments Service account.</p>
+<p class="govuk-body">Changes to the following sections will update your Rural Payments service account.</p>
 <br>
 
 
