FTF E2E testing session 2 tweaks

--- a/app/views/ftf/application/v3-0/email2.html
+++ b/app/views/ftf/application/v3-0/email2.html
@@ -167,7 +167,7 @@
 
             <a href="login2">Upload your application forms and evidence</a>.
             <br><br>
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
+            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of the application forms.
             <br><br><br>
             You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.
             <br><br>
