--- a/app/views/ftf/monitoring/v1-0_y5/login.html
+++ b/app/views/ftf/monitoring/v1-0_y5/login.html
@@ -75,7 +75,7 @@
       <br>
 
 
-      <a href="../../activity-list/v3-0/index?status=07e&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=03&monitoring-05=01">
+      <a href="../../activity-list/v3-0/index?status=07e&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=03&monitoring-05=02a">
         <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
           Continue
         </button>
