--- a/app/views/index.html
+++ b/app/views/index.html
@@ -297,6 +297,166 @@
 
 <hr id="low-fidelity-design" style="margin: 40px 0;">
 
+
+
+
+
+<h3 class="govuk-heading-m">Error messages</h3>
+
+
+
+
+
+<div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
+  <div class="govuk-accordion__section">
+    <div class="govuk-accordion__section-header">
+      <h2 class="govuk-accordion__section-heading">
+        <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
+          FTF E2E
+        </span>
+      </h2>
+      <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+        EOI, Application, Agreement, Claim.
+      </div>
+    </div>
+    
+    
+    
+    <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content">
+      
+      <h3 class="govuk-heading-s">1. EOI</h3>
+
+      <ul class="govuk-list">
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/q1-farmer-type">Q1 - Who are you?</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/q2-project">Q2 - Is the planned project in England?</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/q4-eligible">Q4 - What eligible items do you need for your project?</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/q8-crops">Q8 - What main crops will be irrigated?</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/p-details">Project details</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/b-details">Business details</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/eoi/v2-0/errors/submit">Submit expression of interest</a>
+        </li>
+      </ul>
+
+
+      <h3 class="govuk-heading-s">2. Application</h3>
+
+      <ul class="govuk-list">
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/download2">Download application forms</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/upload">Upload evidence</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form1">Application form and appendix 1</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form2">Application form and appendix 2</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/financial1">Financial accounts 1</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/financial3a">Financial accounts 3a</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/submit">Submit application</a>
+        </li>
+    </ul>
+    
+
+
+    <h3 class="govuk-heading-s">3. Agreement</h3>
+
+    <ul class="govuk-list">
+      <li>
+          <a class="govuk-link" target="_blank" href="/ftf/agreement/v2-0/errors/review-terms-and-conditions">Review terms and conditions</a>
+      </li>
+      <li>
+          <a class="govuk-link" target="_blank" href="/ftf/agreement/v2-0/errors/accept-grant-funding-agreement">Accept grant funding agreement</a>
+      </li>
+  </ul>
+
+
+
+  <h3 class="govuk-heading-s">4. Claim</h3>
+
+  <ul class="govuk-list">
+    <li>
+        <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/download">Download claim form</a>
+    </li>
+    <li>
+        <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/upload4">Upload claim form and evidence</a>
+    </li>
+    <li>
+        <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/submit">Submit claim</a>
+    </li>
+</ul>
+
+
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <div class="govuk-accordion__section">
+    <div class="govuk-accordion__section-header">
+      <h2 class="govuk-accordion__section-heading">
+        <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-2">
+          FETF E2E
+        </span>
+      </h2>
+      <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
+        Application, Agreement, Claim.
+      </div>
+    </div>
+
+    <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content">
+      <ul class="govuk-list">
+        <li>
+          <a class="govuk-link" href="#">Work in progress</a>
+        </li>
+
+      </ul>
+    </div>
+
+
+  </div>
+</div>
+
+
+
+
+
+
+<hr id="low-fidelity-design" style="margin: 40px 0;">
+
+
+
+
+
 <h2 class="govuk-heading-l">Low-fidelity design</h2>
 
 <span class="content-section">
