--- a/app/views/ftf/application/v3-0/errors/financial3a.html
+++ b/app/views/ftf/application/v3-0/errors/financial3a.html
@@ -25,10 +25,10 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a href="#doc1" id="doc1">Financial evidence 3.zip must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</a>
+          <a href="#doc1" id="doc1">The file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</a>
         </li>
         <li>
-          <a href="#doc2" id="doc2">Financial evidence 4.jpg must be smaller than 20MB</a>
+          <a href="#doc2" id="doc2">The file must must be smaller than 20MB</a>
         </li>
       </ul>
     </div>
