--- a/app/views/ftf/application/v3-0/errors/form1.html
+++ b/app/views/ftf/application/v3-0/errors/form1.html
@@ -30,10 +30,10 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a href="#doc1" id="doc1">Select a completed application form</a>
+          <a href="#doc1" id="doc1">Select your completed application form</a>
         </li>
         <li>
-          <a href="#doc2" id="doc2">Select a completed appendix</a>
+          <a href="#doc2" id="doc2">Select your completed appendix</a>
         </li>
       </ul>
     </div>
