--- a/app/views/ftf/claim/v3-0/errors/submit.html
+++ b/app/views/ftf/claim/v3-0/errors/submit.html
@@ -29,7 +29,7 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a href="#check">You must check the box to submit your claim</a>
+          <a href="#check">Select the box to agree and submit your claim</a>
         </li>
       </ul>
     </div>
@@ -81,6 +81,8 @@
       <body>
       
       <div class="govuk-form-group govuk-form-group--error">
+        <p id="whoAreYou-error" class="govuk-error-message">Select to agree and submit your claim</p>
+
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="check">
