--- a/app/views/ftf/eoi/v2-0/errors/submit.html
+++ b/app/views/ftf/eoi/v2-0/errors/submit.html
@@ -29,7 +29,7 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a href="#check">You must check the box to register your interest</a>
+          <a href="#check">Select the box to register your interest</a>
         </li>
       </ul>
     </div>
@@ -98,6 +98,8 @@
 <body>
 
 <div class="govuk-form-group govuk-form-group--error">
+  <p id="whoAreYou-error" class="govuk-error-message">Select to agree and register your interest</p>
+
 <div class="govuk-checkboxes__item">
   <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
   <label class="govuk-label govuk-checkboxes__label" for="check">
