--- a/app/views/index.html
+++ b/app/views/index.html
@@ -361,11 +361,14 @@
             <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/upload">Upload evidence</a>
         </li>
         <li>
-            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form1">Application form and appendix 1</a>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form1">Application form and appendix 1 (no files uploaded)</a>
         </li>
         <li>
-            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form2">Application form and appendix 2</a>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form2">Application form and appendix 2 (wrong file type)</a>
         </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/form3">Application form and appendix 3 (file too big & upload failure)</a>
+      </li>
         <li>
             <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/financial1">Financial accounts 1</a>
         </li>
