FETF Error messages - Claim

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -434,15 +434,31 @@
       <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
         Application, Agreement, Claim.
       </div>
+
+
     </div>
 
+
+
+
+
+
     <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content">
+  
+      <h3 class="govuk-heading-s">4. Claim</h3>
+
       <ul class="govuk-list">
         <li>
-          <a class="govuk-link" href="#">Work in progress</a>
+            <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/download">Download claim form</a>
         </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/upload4">Upload claim form and evidence</a>
+        </li>
+        <li>
+            <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/submit">Submit claim</a>
+        </li>
+    </ul>
 
-      </ul>
     </div>
 
 
