FETF Error messages - links update

--- a/app/views/fetf/claim/v1-0/errors/paper-pot2b.html
+++ b/app/views/fetf/claim/v1-0/errors/paper-pot2b.html
@@ -173,7 +173,7 @@ Error
 
 
 
-     <a href="upload?01=c&02=n&03=n&04=n&05=n&06=n">
+     <a href="#">
         <button class="govuk-button">
           Continue
         </button>
