--- a/app/views/fetf/claim/v1-0/errors/submit.html
+++ b/app/views/fetf/claim/v1-0/errors/submit.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-claim-round-2.html" %}
 
-{% set pageName="Submit" %}
+{% set pageName="Error" %}
 
 {% block content %}
 
@@ -91,7 +91,7 @@
 
 <br>
 
-<a href="confirmation.html">
+<a href="#">
   <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
     Submit claim
   </button>
