--- a/app/views/fetf/claim/v1-0/errors/upload.html
+++ b/app/views/fetf/claim/v1-0/errors/upload.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main-claim-round-2.html" %}
 
 {% block pageTitle %}
-  Upload evidence
+  Error 
 {% endblock %}
 
 {% block content %}
@@ -87,7 +87,7 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
+              <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
@@ -100,7 +100,7 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
+              <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
@@ -113,7 +113,7 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
+              <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
@@ -126,7 +126,7 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
+              <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
@@ -138,7 +138,7 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
+              <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
@@ -154,7 +154,7 @@
 
           <li class="govuk-task-list__item govuk-task-list__item--with-link">
             <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
+              <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
             </div>
             <div class="govuk-task-list__status" id="application-details-4-status">
               <strong class="govuk-tag govuk-tag--blue">
@@ -169,7 +169,7 @@
       </ol>
       </div>
 
-      <a href="summary">
+      <a href="#">
         <button class="govuk-button">
           Continue
         </button>
