--- a/app/views/index.html
+++ b/app/views/index.html
@@ -445,18 +445,37 @@
 
     <div id="accordion-with-summary-sections-content-2" class="govuk-accordion__section-content">
   
-      <h3 class="govuk-heading-s">4. Claim</h3>
+
+
+      <h3 class="govuk-heading-s">1. Application</h3>
+      <p class="govuk-body">(Work in progress)</p>
+
+
+
+      <h3 class="govuk-heading-s">2. Agreement</h3>
+      <p class="govuk-body">Check the FTF E2E section above for references</p>
+
+
+
+      <h3 class="govuk-heading-s">3. Claim</h3>
 
       <ul class="govuk-list">
         <li>
-            <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/download">Download claim form</a>
+            <a class="govuk-link" target="_blank" href="/fetf/claim/v1-0/errors/upload">Upload claim evidence</a>
         </li>
         <li>
-            <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/upload4">Upload claim form and evidence</a>
+          <a class="govuk-link" target="_blank" href="/fetf/claim/v1-0/errors/paper-pot">Item details 1 (Input errors)</a>
         </li>
         <li>
-            <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/submit">Submit claim</a>
+          <a class="govuk-link" target="_blank" href="/fetf/claim/v1-0/errors/paper-pot2a">Item details 2 (File type and size errors)</a>
         </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/fetf/claim/v1-0/errors/paper-pot2b">Item details 3 (Evidence upload error)</a>
+        </li>
+        <li>
+          <a class="govuk-link" target="_blank" href="/fetf/claim/v1-0/errors/submit">Submit claim</a>
+        </li>
+      
     </ul>
 
     </div>
@@ -492,17 +511,7 @@
 <p class="govuk-body">Visual service blueprint: <a href="https://app.mural.co/t/dcx6016/m/dcx6016/1680772774235/818de9cbf49a0707a8fe625bbf1ce9bdaaac6440?sender=u6609daa1d6d5f14bc3eb0833" target="_blank">Mural board (opens in new tab)</a></p>
 </span>
 
-<!-- <hr style="margin: 40px 0;">
 
-<span class="content-section">
-<h3 class="govuk-heading-m">Team contact details</h3>
-<ul class="govuk-list">
-  <li>Content design: <a href="mailto:carole.ray@capgemini.com">Carole Ray</a></li>
-  <li>Interaction design: <a href="mailto:gareth.thomas@defra.gov.uk">Gareth Thomas</a> / <a href="mailto:Mikael.Metthey@defra.gov.uk">Mikael Metthey</a></li>
-  <li>Service design: <a href="mailto:gren.hamlyn@capgemini.com">Gren Hamlyn</a></li>
-  <li>User research: <a href="mailto:Vidya.Sarangapani@defra.gov.uk">Vidya Sarangapani</a> / <a href="mailto:Daniel.Okoli@defra.gov.uk">Daniel Okoli</a></li>
-</ul>
-</span> -->
 
   </div>
 </div>
