--- a/app/views/ftf/application/v3-0/errors/financial3a.html
+++ b/app/views/ftf/application/v3-0/errors/financial3a.html
@@ -25,10 +25,10 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a href="#doc1" id="doc1">The file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</a>
+          <a href="#doc1" id="doc1">The selected file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</a>
         </li>
         <li>
-          <a href="#doc2" id="doc2">The file must must be smaller than 20MB</a>
+          <a href="#doc2" id="doc2">The selected file must must be smaller than 20MB</a>
         </li>
       </ul>
     </div>
@@ -126,7 +126,6 @@
     <div class="govuk-form-group govuk-form-group--error">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;"><strong>Financial evidence 3.zip must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</strong></p>
-      <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Replace file</a></p>
     </div>
     </div>
 
@@ -135,7 +134,6 @@
   <div class="govuk-form-group govuk-form-group--error">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;"><strong>Financial evidence 4.jpg must be smaller than 20MB</strong></p>
-      <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Replace file</a></p>
     </div>
   </div>
 
