--- a/app/views/ftf/application/v3-0/errors/form1.html
+++ b/app/views/ftf/application/v3-0/errors/form1.html
@@ -69,7 +69,7 @@
         <strong>Upload a file</strong>
       </label>
       <p id="file-upload-1-error" class="govuk-error-message">
-        <span class="govuk-visually-hidden">Error:</span> Select a completed application form
+        <span class="govuk-visually-hidden">Error:</span> Select your completed application form
       </p>
       <input class="govuk-file-upload govuk-file-upload--error" id="file-upload-1" name="fileUpload1" type="file" aria-describedby="file-upload-1-error">
     </div>
@@ -98,7 +98,7 @@
         <strong>Upload a file</strong>
       </label>
       <p id="file-upload-2-error" class="govuk-error-message">
-        <span class="govuk-visually-hidden">Error:</span> Select a completed appendix
+        <span class="govuk-visually-hidden">Error:</span> Select your completed appendix
       </p>
       <input class="govuk-file-upload govuk-file-upload--error" id="file-upload-2" name="fileUpload2" type="file" aria-describedby="file-upload-2-error">
     </div>
