--- a/app/views/index.html
+++ b/app/views/index.html
@@ -324,7 +324,7 @@
     
     <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content">
       
-      <h3 class="govuk-heading-s">1. EOI</h3>
+      <h3 class="govuk-heading-s">1. EOI (for reference only)</h3>
 
       <ul class="govuk-list">
         <li>
