FTF Claim - Download page update

--- a/app/views/ftf/claim/v3-0/download.html
+++ b/app/views/ftf/claim/v3-0/download.html
@@ -39,7 +39,7 @@
 <h3 class="govuk-heading-m">What you need to do</h3>
     <span class="govuk-body">Download and complete the claim form.</span>
      <br><br>
-    <p class="govuk-body">When you are ready to submit your claim, <a href="/_common/not-testing.html">upload your claim form and evidence</a>.</p>
+    <p class="govuk-body">When you are ready to submit your claim, upload your claim form and evidence.</p>
   
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
