FTF Error messages - content update

--- a/app/views/ftf/agreement/v2-0/errors/accept-grant-funding-agreement.html
+++ b/app/views/ftf/agreement/v2-0/errors/accept-grant-funding-agreement.html
@@ -56,7 +56,7 @@ Error
         <body>
         <br>
         <div class="govuk-form-group govuk-form-group--error">
-          <p id="whoAreYou-error" class="govuk-error-message">Select to accept and continue</p>
+          <p id="whoAreYou-error" class="govuk-error-message">Select the box to accept and continue</p>
 
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
