--- a/app/views/ftf/agreement/v2-0/errors/review-terms-and-conditions.html
+++ b/app/views/ftf/agreement/v2-0/errors/review-terms-and-conditions.html
@@ -64,7 +64,7 @@ Error
         <body>
         <br>
         <div class="govuk-form-group govuk-form-group--error">
-          <p id="whoAreYou-error" class="govuk-error-message">Select to agree and continue</p>
+          <p id="whoAreYou-error" class="govuk-error-message">Select the box to agree and continue</p>
 
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
