--- a/app/views/ftf/application/v3-0/errors/submit.html
+++ b/app/views/ftf/application/v3-0/errors/submit.html
@@ -61,25 +61,6 @@
     </ul>
 
 
-    <!-- <h2 class="govuk-heading-l">Declaration</h2>
-
-    <p class="govuk-body">By submitting and/or agreeing to the submission of this application form I agree to the following declaration:<br>
-
-    <p class="govuk-body">I confirm that, to the best of my knowledge and belief, all of the information contained in this application is true and correct and I accept full responsibility for it.<br>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>I understand that should this application be successful, I will be required to supply additional information.</li>
-          <li>If there is any change to the information I have provided, I will notify the Rural Payments Agency straight away.</li>
-          <li>I understand that any information I supply may be used by public bodies or their appointed agents in connection with the Farming Transformation Fund and that I may be contacted from time to time, whether or not my application is successful.</li>
-          <li>If applicable, I confirm that I am an eligible applicant as detailed in the Farming Transformation Fund Water Management Manual.</li>
-          <li>I am aware of the conditions that apply to this application and have complied with them.</li>
-          <li>I declare that I have read, understood and complied with all of the relevant guidance information relating to the Farming Transformation Fund.</li>
-          <li>I understand that my business may be inspected and I agree to give access, co-operate and provide any help needed.</li>
-          <li>I confirm that I have disclosed details of all business interests held by any members of this business.</li>
-          <li>I understand that if my application is successful, I will be required to enter into a grant funding agreement, and payment of any grant funding will be conditional on compliance with the terms of that agreement.</li>
-          <li>I understand that use of an agent will not limit my responsibility to comply with the terms of that agreement, nor does it affect my personal responsibility to make sure the information provided in this application is accurate. I authorise the person(s) list at section 2 in the application form to liaise with RPA regarding this application and to be copied in on any correspondence relating to this application.</li>
-        </ul> -->
-
-
 
       <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -120,7 +101,7 @@
 <body>
 
 <div class="govuk-form-group govuk-form-group--error">
-  <p id="whoAreYou-error" class="govuk-error-message">Select to agree and submit your application</p>
+  <p id="whoAreYou-error" class="govuk-error-message">Select the box to agree and submit your application</p>
 <div class="govuk-checkboxes__item">
   <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
   <label class="govuk-label govuk-checkboxes__label" for="check">
