FETF Error messages - Content tweaks

--- a/app/views/fetf/claim/v1-0/errors/submit.html
+++ b/app/views/fetf/claim/v1-0/errors/submit.html
@@ -79,7 +79,7 @@
       <body>
       
       <div class="govuk-form-group govuk-form-group--error">
-        <p id="whoAreYou-error" class="govuk-error-message">Select to agree and submit your claim</p>
+        <p id="whoAreYou-error" class="govuk-error-message">Select the box to agree and submit your claim</p>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="check">
