--- a/app/views/ftf/eoi/v2-0/errors/submit.html
+++ b/app/views/ftf/eoi/v2-0/errors/submit.html
@@ -98,7 +98,7 @@
 <body>
 
 <div class="govuk-form-group govuk-form-group--error">
-  <p id="whoAreYou-error" class="govuk-error-message">Select to agree and register your interest</p>
+  <p id="whoAreYou-error" class="govuk-error-message">Select the box to agree and register your interest</p>
 
 <div class="govuk-checkboxes__item">
   <input class="govuk-checkboxes__input" id="check" name="waste" type="checkbox" value="carcasses">
