--- a/app/views/index.html
+++ b/app/views/index.html
@@ -355,7 +355,7 @@
 
       <ul class="govuk-list">
         <li>
-            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/download2">Download application forms</a>
+            <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/download2">Download application forms (experimental)</a>
         </li>
         <li>
             <a class="govuk-link" target="_blank" href="/ftf/application/v3-0/errors/upload">Upload evidence</a>
@@ -399,7 +399,7 @@
 
   <ul class="govuk-list">
     <li>
-        <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/download">Download claim form</a>
+        <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/download">Download claim form (experimental)</a>
     </li>
     <li>
         <a class="govuk-link" target="_blank" href="/ftf/claim/v3-0/errors/upload4">Upload claim form and evidence</a>
